update dirs and fix broken links

--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
 
     <div class="article-content">
       <p>Hi, I&rsquo;m Matt.</p>
-<!-- raw HTML omitted -->
+<p><img src="https://mjbroerman.github.io/images/circ_profile_md.png" alt="rarely a tie"></p>
 <p>I recently graduated from the University of Pittsburgh with a Master in Applied Statistics. I got to work on some <a href="https://ieeexplore.ieee.org/document/9288091">exciting</a> <a href="https://mjbroerman.github.io/projects/">projects</a> in computational biology, I&rsquo;m currently working on some collaborations with <a href="https://www.instagram.com/ssteenaa/">others</a>, and I&rsquo;m looking to work on some more. Please drop me a line at matt dot broerman at gmail dott com. Résumé available upon request.</p>
 <p>Here I&rsquo;ll be blogging mostly with R and Python about my interests in climate, the justice system, and bayesian methods, with some tips, reflections, and art along the way.</p>
 <p>Thanks to the <a href="https://github.com/rstudio/blogdown">blogdown</a> package by Yihui Xie, and the <a href="https://github.com/jrutheiser/hugo-lithium-theme">lithium theme</a> by
